--- a/src/boothalgorithm/BoothForm.form
+++ b/src/boothalgorithm/BoothForm.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="654" height="604"/>
+      <xy x="20" y="20" width="1102" height="775"/>
     </constraints>
-    <properties/>
+    <properties>
+      <font name="D2Coding ligature" size="12" style="1"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="8cebf" class="javax.swing.JRadioButton" binding="bit8Btn">
@@ -13,6 +15,7 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="8bit"/>
         </properties>
       </component>
@@ -21,6 +24,7 @@
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="16bit"/>
         </properties>
       </component>
@@ -29,6 +33,7 @@
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="32bit"/>
         </properties>
       </component>
@@ -37,6 +42,7 @@
           <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="64bit"/>
         </properties>
       </component>
@@ -45,6 +51,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="피승수 입력"/>
         </properties>
       </component>
@@ -53,6 +60,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="승수 입력"/>
         </properties>
       </component>
@@ -61,6 +69,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="결과 출력"/>
         </properties>
       </component>
@@ -69,6 +78,7 @@
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="4bit"/>
         </properties>
       </component>
@@ -77,16 +87,18 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="bit 선택"/>
         </properties>
       </component>
       <component id="8f761" class="javax.swing.JTextArea" binding="resultArea">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="6" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="1000" height="600"/>
+            <preferred-size width="1500" height="600"/>
           </grid>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value=""/>
         </properties>
       </component>
@@ -96,7 +108,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
+        </properties>
       </component>
       <component id="82736" class="javax.swing.JTextField" binding="multiplierInputField">
         <constraints>
@@ -104,13 +118,16 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
+        </properties>
       </component>
       <component id="f8c2c" class="javax.swing.JButton" binding="exitBtn">
         <constraints>
           <grid row="5" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="종료"/>
         </properties>
       </component>
@@ -119,6 +136,7 @@
           <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="D2Coding ligature" size="16" style="1"/>
           <text value="실행"/>
         </properties>
       </component>
@@ -127,7 +145,7 @@
           <grid row="0" column="0" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font size="20" style="1"/>
+          <font name="D2Coding ligature" size="28" style="1"/>
           <text value="반드시 bit, 피승수, 승수를 입력 후 실행 버튼을 눌려주세요!"/>
         </properties>
       </component>
