--- a/src/boothalgorithm/BoothForm.form
+++ b/src/boothalgorithm/BoothForm.form
@@ -93,9 +93,7 @@
       </component>
       <component id="8f761" class="javax.swing.JTextArea" binding="resultArea">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="6" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="1500" height="600"/>
-          </grid>
+          <grid row="4" column="1" row-span="1" col-span="6" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="D2Coding ligature" size="16" style="1"/>
